arreglo de inregularidados en el codigo y acceso

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -195,6 +195,7 @@ main figure img{
     text-decoration: none;
     color: #F9F9F9;
     border-radius: 7px;
+    transition: all .5s ease;
 }
 .closedMen{
 margin-bottom: 20px;
@@ -208,7 +209,7 @@ cursor: pointer;
     text-align: center;
     width: 60%;
     margin: 0 auto;
-    padding: 40px 0;
+    padding: 40px 0 0 0 ;
 }
 .mantenimiento img{
     width: 250px;
