--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -86,7 +86,7 @@ main section div,main section a{
 }
 main section a:hover{
     background-color: #F9F9F9;
-    border: 1px solid #686868;
+    border: 2px solid #686868;
     color: #141414;
     font-weight: bold;
 }
@@ -101,8 +101,8 @@ main section a:hover{
 }
 
 .button__login:hover{
-    background: #F9F9F9;
-    border: 2px solid #686868;
+    background: #10010187;
     color: #141414;
-    font-weight: bold;
+    
+   
 }
